--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div.gallery {
 }
 
 div.gallery:hover {
-  border: 1px solid #C5915D;
+  border: 1px solid #633C15;
 }
 
 div.gallery img {
@@ -34,37 +34,37 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0132.jpg">
-    <img src="images/IMG_0132.jpg" alt="Forest" width="400" height="400">
+    <img src="images/IMG_0132.jpg" alt="Women in Black" width="400" height="400">
   </a>
   <div class="desc">Artwork</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_lights.jpg">
-    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+  <a target="_blank" href="images/IMG_8481.jpg">
+    <img src="images/IMG_8481.jpg" alt="Family Among Sunflowers" width="308.8" height="232">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Photo</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="images/IMG_8593.jpg">
+    <img src="images/IMG_8593.jpg" alt="Mushrooms" width="266.1" height="357.2">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Artwork</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="images/IMG_8729.jpg">
+    <img src="images/IMG_8729.jpg" alt="Selfie1" width="232" height="308.8">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Selfie</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="images/IMG_9001.jpg">
+    <img src="images/IMG_9001.jpg" alt="Selfie2" width="118.8" height="220.8">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Selfie</div>
 </div>
 
 </body>
