--- a/style.css
+++ b/style.css
@@ -40,22 +40,22 @@ div.desc {
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="images/IMG_8481.jpg">
-    <img src="images/IMG_8481.jpg" alt="Family Among Sunflowers" width="308.8" height="232">
+  <a target="_blank" href="images/IMG_8481.jpeg">
+    <img src="images/IMG_8481.jpeg" alt="Family Among Sunflowers" width="308.8" height="232">
   </a>
   <div class="desc">Photo</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="images/IMG_8593.jpg">
-    <img src="images/IMG_8593.jpg" alt="Mushrooms" width="266.1" height="357.2">
+  <a target="_blank" href="images/IMG_8593.jpeg">
+    <img src="images/IMG_8593.jpeg" alt="Mushrooms" width="266.1" height="357.2">
   </a>
   <div class="desc">Artwork</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="images/IMG_8729.jpg">
-    <img src="images/IMG_8729.jpg" alt="Selfie1" width="232" height="308.8">
+  <a target="_blank" href="images/IMG_8729.jpeg">
+    <img src="images/IMG_8729.jpeg" alt="Selfie1" width="232" height="308.8">
   </a>
   <div class="desc">Selfie</div>
 </div>
