--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@
     src:url("fonts/OpenSans-Regular.ttf");
 }
 @font-face {
-    font-family: "Open Sans";
+    font-family: "Lora Medium";
     src:url("fonts/Lora-Medium.ttf");
 }
