--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:hover {
   
 a:active {
     text-decoration: underline;
-    color:#FCF3E4;
+    color:#7AC89E;
 }
 h1.a {
     text-align: center;
